1 February 2018: Wouter
	- fix unaligned structure making a false positive in checklock
	  unitialised memory.

29 January 2018: Ralph
	- Use NSEC with longest ce to prove wildcard absence.
	- Only use *.ce to prove wildcard absence, no longer names.

25 January 2018: Wouter
	- ltrace.conf file for libunbound in contrib.

23 January 2018: Wouter
	- Fix that unbound-checkconf -f flag works with auto-trust-anchor-file
	  for startup scripts to get the full pathname(s) of anchor file(s).
	- Print fatal errors about remote control setup before log init,
	  so that it is printed to console.

22 January 2018: Wouter
	- Accept tls-upstream in unbound.conf, the ssl-upstream keyword is
	  also recognized and means the same.  Also for tls-port,
	  tls-service-key, tls-service-pem, stub-tls-upstream and
	  forward-tls-upstream.
	- Fix #3397: Fix that cachedb could return a partial CNAME chain.
	- Fix #3397: Fix that when the cache contains an unsigned DNAME in
	  the middle of a cname chain, a result without the DNAME could
	  be returned.

19 January 2018: Wouter
	- tag 1.6.8 for release with CVE fix.
	- trunk has 1.6.9 with fix and previous commits.
	- patch for CVE-2017-15105: vulnerability in the processing of
	  wildcard synthesized NSEC records.
	- iana port update.
	- make depend: code dependencies updated in Makefile.

4 January 2018: Ralph
	- Copy query and correctly set flags on REFUSED answers when cache
	  snooping is not allowed.

3 January 2018: Ralph
	- Fix queries being leaked above stub when refetching glue.

2 January 2017: Wouter
	- Fix that DS queries with referral replies are answered straight
	  away, without a repeat query picking the DS from cache.
	  The correct reply should have been an answer, the reply is fixed
	  by the scrubber to have the answer in the answer section.
	- Remove clang optimizer disable,
	  Fix that expiration date checks don't fail with clang -O2.

15 December 2017: Wouter